--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
         <artifactId>mariadb-java-client</artifactId>
         <version>3.3.3</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.34</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
